<resources>

    <string name="app_name">Oh, you see!</string>

    <!-- SigninActivity -->
    <string name="SigninActivity_label">登录</string>
    <string name="signin_type">登录类型</string>
    <string name="account">学 工 号</string>
    <string name="signin">登      录</string>
    <string name="password">查询密码</string>
    <string name="account_input_hint">请输入学（工）号</string>
    <string name="password_input_hint">请输入校园卡查询密码</string>
    <string name="checkcode">验 证 码</string>
    <string name="checkcode_input_hint">请输入验证码</string>
    <string name="signin_checkcode_image">验证码图片</string>
    <string name="signin_pic_below">登录界面下方的图片</string>
    
    <!-- MainActivity -->
    <string name="MainActivity_label">Oh, you see!</string>
    	<!--MainActivity Tab -->
    <string name="manage">校园卡管理</string>
    <string name="lost_found">丢失和拾获</string>
    <string name="information">消息通知</string>
    <string name="settings">设置</string>
    	<!-- MainActivity Menu -->
    <string name="action_search">搜索</string>
    <string name="menu_add_lost_info">添加丢失信息</string>
    <string name="menu_add_found_info">添加拾获信息</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_exit">退出应用</string>

    <!-- ManagementFragment -->
    <string name="name">姓名</string>
    <string name="stu_id">学工号 </string>
    <string name="ecard_id">校园卡号</string>
    <string name="balance">校园卡余额</string>
    <string name="transition">过渡余额</string>
    <string name="report_loss_state">挂失状态</string>
    <string name="freeze_state">冻结状态</string>
    <string name="main_top_pic">界面上方展示的图片</string>
    <string name="grid_view_item_img_content_description">grid_view子项的图片</string>
    
    <!-- ManageViewBasicInfoActivity -->
    <string name="ManageViewBasicInfoActivity_label">基本信息</string>
    
    <!-- ManageTradingInquiryActivity -->
    <string name="ManageTradingInquiryActivity_label">流水查询</string>
    <string name="start_time">起始时间</string>
    <string name="end_time">结束时间</string>
    <string name="history_inquiry_confirm">确    认</string>
    <string name="history_inquiry_arrow_img">箭头</string>
    	<!-- HistoryTradingINquiryResultFragment -->
    	<string name="history_trading_inquiry_result_foot_output">本段时间共支出    ？？？  元 </string>
    	
    <!-- ManageReportLossActivity -->
    <string name="ManageReportLossActivity_label">挂失校园卡</string>
    <string name="report_loss_password_hint">请输入校园卡查询密码</string>
    <string name="report_loss_password_img_desc">挂失密码键盘图片</string>
    <string name="report_loss_checkcode_image">挂失验证码图片</string>
    <string name="report_loss">挂      失</string>
    <!-- LostAndFoundFragment -->
    <string name="lost_and_found_info_browsing">失卡招领信息浏览</string>
    <string name="card_loss_registration">丢失卡登记</string>
    <string name="lost_and_found_info_browsing_img_des">失卡招领信息浏览配图</string>
    <string name="card_loss_registration_img_des">丢失卡登记配图</string>
    <!-- LostAndFoundInformationBrowsingActivity -->
    <string name="LostAndFoundInformationBrowsingActivity_label">失卡招领信息浏览</string>
    <string name="not_founded">未招领</string>
    <string name="founded">已招领</string>
    <string name="view_detail">查看详细信息</string>
    <string name="publish_time">发布时间</string>
    <!-- xListView_item -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <!-- LostInfoBrowsingViewDetail -->
    <string name="LostInfoBrowsingViewDetailActivity_label">失卡招领详细信息</string>
    <string name="contact">联系方式</string>
    <string name="lost_place">丢卡地点</string>
    <string name="description">说明</string>
    <string name="state">招领状态</string>
    <string name="found_time">招领时间</string>
    <string name="send_message_to_ta">向  Ta  发  送  消  息</string>
    
    <!-- LostAndFoundRegistrationActivity -->
    <string name="LostAndFoundRegistrationActivity_label">丢失卡登记</string>
    <string name="save_and_submit">保 存  并  提  交</string>
    <string name="lost_info_registration_contact_hint">必填，7—11位号码</string>
    <string name="lost_info_registration_lost_place_hint">选填，最多128个字符</string>
    <string name="lost_info_registration_description_hint">选填，最多256个字符</string>
    
    <!-- InformationCreateNoticeActivity -->
    <string name="InformationCreateNoticeActivity_label">发消息</string>
</resources>
