<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background" >
    
    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginTop="15dp"
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/white">
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="start"
            android:text="@string/name"/>
        <TextView 
            android:id="@+id/lost_info_registration_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="end"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>

    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginTop="20dp"
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/white">
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/stu_id"/>
        <TextView 
            android:id="@+id/lost_info_registration_stu_id"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="end"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>
    
    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginTop="20dp"
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/white">
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/ecard_id"/>
        <TextView 
            android:id="@+id/lost_info_registration_account"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="end"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>
    
    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginTop="40dp"
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/white">
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/contact"/>
        <EditText
            android:id="@+id/lost_info_registration_contact"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="phone"
            android:hint="@string/lost_info_registration_contact_hint"
            android:singleLine="true"
            android:maxLength="11"
            android:gravity="end"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>
    
    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginTop="20dp"
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/white">
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:text="@string/lost_place"/>
        <EditText
            android:id="@+id/lost_info_registration_lost_place"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/lost_info_registration_lost_place_hint"
            android:maxLength="128"
            android:singleLine="false"
            android:gravity="end"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>
    
    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginTop="20dp"
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/white">
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:text="@string/description"/>
        <EditText
            android:id="@+id/lost_info_registration_description"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/lost_info_registration_description_hint"
            android:textSize="16sp"
            android:singleLine="false"
            android:maxLength="256"
            android:gravity="end"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>

    <Button
        android:id="@+id/lost_info_registration_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/skyblue_button_selector"
        android:textColor="@color/white"
        android:text="@string/save_and_submit"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="40dp"
        android:scaleType="fitCenter"
        android:src="@drawable/lost_and_found_registration"
        android:contentDescription="@string/card_loss_registration_img_des"/>
</LinearLayout>
</ScrollView>