<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    android:padding="20dp"
    android:background="@color/background" >
    
    <LinearLayout 
        android:id="@+id/lost_and_found_fragment_lost_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/background">
        <TextView
            android:id="@+id/lost_and_found__fragmentlost_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textSize="18sp"
            android:background="@drawable/green_button_selector"
            android:text="@string/lost_and_found_info_browsing"/>
        <ImageView
            android:id="@+id/lost_and_found_fragment_lost_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/lost_and_found_info_browsing"
            android:contentDescription="@string/lost_and_found_info_browsing_img_des"/>
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/lost_and_found_fragment_found_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/background">
        <TextView
            android:id="@+id/lost_and_found_fragment_found_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/skyblue_button_selector"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textSize="18sp"
            android:text="@string/card_loss_registration"/>
        <ImageView
            android:id="@+id/lost_and_found_fragment_found_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/lost_and_found_registration"
            android:contentDescription="@string/card_loss_registration_img_des"/>
    </LinearLayout>
</LinearLayout>
