<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background" >
    
    <!-- 姓名 -->
    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginTop="20dp"
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:background="@color/white">
        <TextView 
            android:id="@+id/report_loss_name_title"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/name"/>
        <TextView
            android:id="@+id/report_loss_name"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp" />
    </LinearLayout>
    <!-- 分割线 -->
    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>
    
    <!-- 学工号 -->
    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginTop="10dp"
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp" >
        <TextView
            android:id="@+id/report_loss_stu_id_title"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/stu_id"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/report_loss_stu_id"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp" />
    </LinearLayout>
    <!-- 分割线 -->
    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>
    
    <!-- 卡号 -->
    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginTop="10dp"
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp" >
        <TextView
            android:id="@+id/report_loss_card_id_title"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/ecard_id"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/report_loss_card_id"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp" />
    </LinearLayout>
    <!-- 分割线 -->
    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>

    <!-- 查询密码 -->
    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginTop="15dp"
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingRight="20dp"
        android:paddingLeft="20dp" >
        <TextView
            android:id="@+id/report_loss_password_title"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/password"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/report_loss_password"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:inputType="textPassword"
            android:maxLength="6"
            android:focusable="false"
            android:hint="@string/report_loss_password_hint"
            android:textSize="16sp" />
    </LinearLayout>
    <!-- 分割线 -->
    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>
    
    <!-- 查询密码图片 -->
    <ImageView 
        android:id="@+id/report_loss_password_img"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="5dp"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        android:contentDescription="@string/report_loss_password_img_desc"/>
    
    <!-- 验证码 -->
    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginTop="15dp"
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp" >
        <TextView 
            android:id="@+id/report_loss_checkcode_text"
            android:layout_width="0dp"
         	android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/checkcode"
            />
        <EditText
            android:id="@+id/report_loss_checkcode_input"
            android:layout_width="0dp"
         	android:layout_weight="2"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:gravity="end"
            android:maxLength="4"
            android:hint="@string/checkcode_input_hint"/>
        <ImageView 
            android:id="@+id/report_loss_checkcode_image"
            android:layout_width="0dp"
         	android:layout_weight="1"
            android:layout_height="match_parent"
            android:clickable="true"
        	android:scaleType="fitCenter"
        	android:src="@drawable/default_checkcode_img"
            android:contentDescription="@string/report_loss_checkcode_image"/>
    </LinearLayout>
    <!-- 分割线 -->
    <View
        android:layout_width="match_parent" 
		android:layout_height="1dp" 
		android:background="@color/grey" 
		android:layout_marginRight="1dp" 
		android:layout_marginLeft="1dp"/>
    
    <Button 
        android:id="@+id/report_loss_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:background="@color/dark"
        android:text="@string/report_loss"/>
    
</LinearLayout>
